--- a/index.html
+++ b/index.html
@@ -1,12 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Football Website</title>
-</head>
-<body>
-    
-</body>
+    <!-- font awesome kit -->
+    <script
+      src="https://kit.fontawesome.com/f527a50378.js"
+      crossorigin="anonymous"
+    ></script>
+    <!---------------------------------------------------->
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+
+  <body>
+    <header>
+      <!-- NAV-BAR START -->
+      <nav>
+        <div class="nav-left">
+          <a href="" class="nav-bar">Home</a>
+          <a href="" class="nav-bar">Clubs</a>
+          <a href="" class="nav-bar">World Cup 2023</a>
+          <a href="" class="nav-bar">Upcoming Matches</a>
+          <a href="" class="nav-bar">Contact</a>
+        </div>
+
+        <div class="nav-right">
+          <button type="button" href="#" class="buttons-all">
+            <i class="fas fa-sign-in-alt"></i> Login
+          </button>
+        </div>
+      </nav>
+      <!---------------------------------------------------------------------------------->
+
+      <!-- TOP BANNER STARTS HERE  -->
+      <section class="top-banner">
+        <div class="top-banner-left">
+          <h1>
+            Conmebol <br />
+            Copa America 2021
+          </h1>
+          <button type="button" href="#" class="buttons-all">
+            Watch Live<i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+
+        <div class="top-banner-right">
+          <img src="images/banner.png" alt="" />
+        </div>
+      </section>
+    </header>
+    <!-------------------------------------------------->
+    <main>
+      <!-- PLAYER CARDS START -->
+      <section class="players">
+        <article class="player">
+          <img src="images/players/player-1.png" alt="" />
+          <h1 class="player-name">Neymar Jr</h1>
+          <p class="player-info">
+            <strong>Full name: </strong> Neymar da Silva Santos Júnior <br />
+            <strong>Salary:</strong>
+            36.8 million EUR (2021) <br />
+            Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+            professional footballer who plays as a forward for Ligue 1 club
+            Paris Saint-Germain and the Brazil national team.
+          </p>
+        </article>
+        <article class="player">
+          <img src="images/players/player-2.png" alt="" />
+          <h1 class="player-name">Lionel Messi</h1>
+          <p class="player-info">
+            <strong>Full name: </strong> Lionel Messi <br />
+            <strong>Salary: </strong>71 million EUR (2021)<br />
+            Lionel Andrés Messi is an Argentine professional footballer who
+            plays as a forward or an attacking midfielder and captains the
+            Argentina national team. He is currently a free agent, having played
+            all his professional career for La Liga club FC Barcelona, whom he
+            captained from 2018 to 2021
+          </p>
+        </article>
+        <article class="player">
+          <img src="images/players/player-3.png" alt="" />
+          <h1 class="player-name">Cristiano Ronaldo</h1>
+          <p class="player-info">
+            <strong>Full name: </strong> Cristiano Ronaldo <br />
+            <strong>Salary: </strong>31 million EUR (2021)<br />
+            Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese
+            professional footballer who plays as a forward for Serie A club
+            Juventus and captains the Portugal national team.
+          </p>
+        </article>
+        <article class="player">
+          <img src="images/players/player-4.png" alt="" />
+          <h1 class="player-name">Paulo Dybala</h1>
+          <p class="player-info">
+            <strong>Full name: </strong>Paulo Dybala <br />
+            <strong>Salary: </strong>13.52 million EUR (2019) <br />
+            Paulo Exequiel Dybala is an Argentine professional footballer who
+            plays as a forward for Serie A club Juventus and the Argentina
+            national team.
+          </p>
+        </article>
+        <article class="player">
+          <img src="images/players/player-5.png" alt="" />
+          <h1 class="player-name">Mesut Özil</h1>
+          <p class="player-info">
+            <strong>Full name: </strong> Mesut Özil <br />
+            <strong>Salary: </strong>3 million EUR (2021) <br />
+            Mesut Özil is a German professional footballer who plays as an
+            attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The
+            Assist King", Özil is known for his technical skills, creativity,
+            agility, and finesse. He has also played as a wide midfielder in his
+            career.
+          </p>
+        </article>
+        <article class="player">
+          <img src="images/players/player-6.png" alt="" />
+          <h1 class="player-name">Mauro Icardi</h1>
+          <p class="player-info">
+            <strong>Full name: </strong>Mauro Icardi <br />
+            <strong>Salary: </strong>10 million EUR (2021) <br />
+            Mauro Emanuel Icardi is an Argentine professional footballer who
+            plays as a striker for Ligue 1 club Paris Saint-Germain and the
+            Argentina national team.
+          </p>
+        </article>
+        <article class="player">
+          <img src="images/players/player-7.png" alt="" />
+          <h1 class="player-name">Ángel Di María</h1>
+          <p class="player-info">
+            <strong>Full name: </strong>Ángel Di María <br />
+            <strong>Salary: </strong>13.44 million EUR (2021)<br />
+            Ángel Fabián Di María is an Argentine professional footballer who
+            plays for Ligue 1 club Paris Saint-Germain and the Argentina
+            national team. He can play as either a winger or attacking
+            midfielder.
+          </p>
+        </article>
+        <article class="player">
+          <img src="images/players/player-8.png" alt="" />
+          <h1 class="player-name">Kylian Mbappé</h1>
+          <p class="player-info">
+            <strong>Full name: </strong>Kylian Mbappé Lottin <br />
+            <strong>Salary: </strong>13.44 million EUR (2021)<br />
+            Kylian Mbappé Lottin is a French professional footballer who plays
+            as a forward for Ligue 1 club Paris Saint-Germain and the France
+            national team. Mbappé began his senior career with Ligue 1 club
+            Monaco, making his professional debut in 2015, aged 16.
+          </p>
+        </article>
+        <article class="player">
+          <img src="images/players/player-9.png" alt="" />
+          <h1 class="player-name">Mohamed Salah</h1>
+          <p class="player-info">
+            <strong>Full name: </strong>Mohamed Salah Hamed Mahrous Ghaly<br />
+            <strong>Salary: </strong>13.44 million EUR (2021)<br />
+            Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional
+            footballer who plays as a forward for Premier League club Liverpool
+            and captains the Egypt national team. Considered one of the best
+            players in the world, he is known for his finishing, dribbling, and
+            speed.
+          </p>
+        </article>
+        <article class="player">
+          <img src="images/players/player-10.png" alt="" />
+          <h1 class="player-name">Harry Edward</h1>
+          <p class="player-info">
+            <strong>Full name: </strong>Harry Edward Kane MBE <br />
+            <strong>Salary: </strong>13.44 million EUR (2021)<br />
+            Harry Edward Kane MBE is an English professional footballer who
+            plays as a striker for Premier League club Tottenham Hotspur and
+            captains the England national team. Regarded as one of the best
+            strikers in the world, Kane is known for his prolific goalscoring
+            record and ability to link play.
+          </p>
+        </article>
+        <article class="player">
+          <img src="images/players/player-11.png" alt="" />
+          <h1 class="player-name">Kevin De Bruyne</h1>
+          <p class="player-info">
+            <strong>Full name: </strong>Kevin De Bruyne <br />
+            <strong>Salary: </strong>13.44 million EUR (2021)<br />
+            Kevin De Bruyne is a Belgian professional footballer who plays as a
+            midfielder for Premier League club Manchester City, where he is
+            vice-captain, and the Belgium national team.
+          </p>
+        </article>
+        <article class="player">
+          <img src="images/players/player-12.png" alt="" />
+          <h1 class="player-name">Philippe Coutinho</h1>
+          <p class="player-info">
+            <strong>Full name: </strong>Philippe Coutinho Correia <br />
+            <strong>Salary: </strong>13.44 million EUR (2021)<br />
+            Philippe Coutinho Correia is a Brazilian professional footballer who
+            plays as an attacking midfielder or winger for Spanish club
+            Barcelona and the Brazil national team. He is known for his
+            combination of vision, passing, dribbling and ability to conjure
+            curving long-range strikes.
+          </p>
+        </article>
+      </section>
+
+      <!-- PLAYER CARDS END -->
+      <!-- COPA AMERICA HIGHLIGHTS---------------------------------------------------->
+      <section class="highlights-banner">
+        <div class="left-banner">
+          <h2 class="highlights-title">All Highlights Copa America 2021</h2>
+          <p class="highlights-text">
+            Argentina became winners of the Copa America for the first time
+            since 1993 as they defeated Brazil in a 1-0 encounter. The night
+            belonged to neither Lionel Messi nor Neymar Jr as both failed to
+            fire for their team.
+          </p>
+          <button type="submit" class="buttons-all">
+            Watch Now<i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="right-banner">
+          <img src="images/match.png" alt="" />
+        </div>
+      </section>
+      <!-- FOOTER STYLING HERE  -->
+      <footer>
+        <div>
+          <img src="images/Logo.png" alt="" />
+          <span class="social-icons">
+            <img
+              class="social-icon"
+              src="images/Social Icons/Instagram.png"
+              alt="" />
+            <img
+              class="social-icon"
+              src="images/Social Icons/Dribbble.png"
+              alt="" />
+            <img
+              class="social-icon"
+              src="images/Social Icons/Twitter.png"
+              alt="" />
+            <img
+              class="social-icon"
+              src="images/Social Icons/Youtube.png"
+              alt=""
+          /></span>
+          <p class="copyright">Copyright © 2022 Football</p>
+        </div>
+      </footer>
+    </main>
+  </body>
 </html>
